# imageprocessor

./: .coverage  .flake8  CONTRIBUTING.rst  CONTRIBUTORS.md  README.md  coverage.xml  pyproject.toml
.github/workflows/: deploy.yml
MDSPygram/: flipping.py  padding.py
PyGram/: flipping.py  greyscale.py  padding.py  rotate.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/source/: imageprocessor.doctree  modules.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/imageprocessor/: flipping.html  greyscale.html  padding.html  rotate.html
docs/_build/html/_sources/: installation.rst.txt  usage.rst.txt
docs/_build/html/source/: imageprocessor.html  modules.html
docs/source/: imageprocessor.rst  modules.rst
imageprocessor/: flipping.py  greyscale.py  padding.py  rotate.py
tests/: test_flipping.py  test_greyscale.py  test_imageprocessor.py  test_padding.py  test_rotate.py
