[tool.poetry]
name = "pygram"
version = "0.1.0"
description = "Python packages that can provide some functionalities to modify an image"
authors = ["Rui, Mo, Joshua, Aishwarya"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
