[tool.poetry]
name = "imageprocessor"
version = "0.1.0"
description = "Python packages that can provide some functionalities to modify an image"
authors = ["Rui, Mo, Joshua, Aishwarya"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
opencv-python = "^4.5.1"
scikit-image = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
