[tool.poetry]
name = "imageprocessor"
version = "0.2.1"
description = "Python packages that can provide some functionalities to modify an image"
authors = ["Rui, Mo, Joshua, Aishwarya"]

# README and important links to show-up on the test PyPI page
readme = "README.md"
homepage = "https://github.com/<github_username>/<github_repo>"
repository = "https://github.com/<github_username>/<github_repo>"
documentation = 'https://<package_name>.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
opencv-python = "^4.5.1"
scikit-image = "^0.18.1"
python-semantic-release = "^7.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.2"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "imageprocessor/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"